--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.otomaniac.com%2Fharga-kawasaki-kx250f%2F&psig=AOvVaw20bjc-zA1hiWOmX0uPTsNW&ust=1617241301652000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJDtsL6z2e8CFQAAAAAdAAAAABAD);
   background-size: cover;
   color: white;
   text-align: center;
